# bw-generator

./: Cargo.toml  Procfile  README.md  dictionary.toml
src/: dictionary.rs  lib.rs  main.rs  phrase.rs  settings.rs
