[package]
name = "bw_generator"
version = "1.0.0"
authors = ["Aleksei Trifonov <avrong@avrong.me>"]
edition = "2018"

[dependencies]
clap = "3.0.0-beta.2"
tokio = { version = "1.9.0", features = ["full"] }
hyper = "0.14.11"
toml = "0.5.8"
rand = "0.8.4"
axum = "0.1.2"
serde = { version = "1.0.127", features = ["derive"] }
serde_json = "1.0.66"
lazy_static = "1.4.0"